--- a/contato.html
+++ b/contato.html
@@ -1,61 +1,61 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="img/icon-logo.ico" type="image/png">
-    <link rel="stylesheet" href="style.css">
-    <title>Contatos</title>
-</head>
-<body class="no-scroll">
-    <header class="header">
-            <i class="fa-solid fa-bars header-menu" style="color: #ffffff;font-size: 20px;"></i>
-            <img class="header-logo" src="img/logo.png">
-            <nav class="nav-bar">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" href="img/icon-logo.ico" type="image/png">
+        <link rel="stylesheet" href="style.css">
+        <title>Contatos</title>
+    </head>
+    <body class="no-scroll">
+        <header class="header">
+            <i class="fa-solid fa-bars header__menu" style="color: #ffffff;font-size: 20px;"></i>
+            <img class="header__logo" src="img/logo.png">
+            <nav class="header__nav-bar">
                 <li><a class="active" href="index.html">Início</a></li>
                 <li><a href="sobre-nos.html">Sobre Nós</a></li>
                 <li><a href="#">Contato</a></li>
             </nav>
-            <nav class="nav-bar_mobile">
-                <div class="nav-bar_mobile-fechar"><i class="fa-solid fa-bars header-menu-fechar" style="color: cornflowerblue;font-size: 20px;"></i></div>
+            <nav class="header__nav-bar--mobile">
+                <div class="header__nav-bar--mobile__fechar"><i class="fa-solid fa-bars header__menu--fechar" style="color:rgb(1, 82, 135);font-size: 20px;"></i></div>
                 <ul>
-                    <li class="nav-bar_mobile_inicio">
+                    <li class="header__nav-bar--mobile__inicio">
                         <a class="active" href="index.html">
                             <i class="fa-solid fa-house"></i>
                             <span>Início</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="sobre-nos.html">
                             <i class="fa-solid fa-pen-fancy"></i>
                             <span>Nossa História</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="podio.html">
                             <i class="fa-solid fa-ranking-star"></i>
                             <span>Pódio Best Delegate</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="comites.html">
                             <i class="fa-solid fa-people-group"></i>
                             <span>Comitês</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="materiais.html">
                             <i class="fa-solid fa-book"></i>
                             <span>Materiais de apoio</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="faq.html">
                             <i class="fa-solid fa-question"></i>
                             <span>FAQ</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_fim">
+                    <li class="header__nav-bar--mobile__fim">
                         <a href="contato.html">
                             <i class="fa-solid fa-phone"></i>
                             <span>Contato</span>
@@ -63,13 +63,13 @@
                     </li>
                 </ul>
             </nav>
-            <i class="fa-solid fa-magnifying-glass header-search" style="color: #ffffff;font-size: 20px;"></i>
+            <i class="fa-solid fa-magnifying-glass header__search" style="color: #ffffff;font-size: 20px;"></i>
         </header>
-        <main class="main">
-            <section class="separar-header"> </section>
-            <h1>CONTATO</h1>
-        </main>
-    <script src="script.js"></script>
-    <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
-</body>
+            <main class="main">
+                <section class="separar-header"> </section>
+                <h1>CONTATO</h1>
+            </main>
+        <script src="script.js"></script>
+        <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
+    </body>
 </html>
