--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -9,53 +9,53 @@
     </head>
     <body class="no-scroll">
         <header class="header">
-            <i class="fa-solid fa-bars header-menu" style="color: #ffffff;font-size: 20px;"></i>
-            <img class="header-logo" src="img/logo.png">
-            <nav class="nav-bar">
+            <i class="fa-solid fa-bars header__menu" style="color: #ffffff;font-size: 20px;"></i>
+            <img class="header__logo" src="img/logo.png">
+            <nav class="header__nav-bar">
                 <li><a class="active" href="index.html">Início</a></li>
                 <li><a href="sobre-nos.html">Sobre Nós</a></li>
                 <li><a href="#">Contato</a></li>
             </nav>
-            <nav class="nav-bar_mobile">
-                <div class="nav-bar_mobile-fechar"><i class="fa-solid fa-bars header-menu-fechar" style="color:rgb(1, 82, 135) ;font-size: 20px;"></i></div>
+            <nav class="header__nav-bar--mobile">
+                <div class="header__nav-bar--mobile__fechar"><i class="fa-solid fa-bars header__menu--fechar" style="color:rgb(1, 82, 135);font-size: 20px;"></i></div>
                 <ul>
-                    <li class="nav-bar_mobile_inicio">
+                    <li class="header__nav-bar--mobile__inicio">
                         <a class="active" href="index.html">
                             <i class="fa-solid fa-house"></i>
                             <span>Início</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="sobre-nos.html">
                             <i class="fa-solid fa-pen-fancy"></i>
                             <span>Nossa História</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="podio.html">
                             <i class="fa-solid fa-ranking-star"></i>
                             <span>Pódio Best Delegate</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="comites.html">
                             <i class="fa-solid fa-people-group"></i>
                             <span>Comitês</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="materiais.html">
                             <i class="fa-solid fa-book"></i>
                             <span>Materiais de apoio</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="faq.html">
                             <i class="fa-solid fa-question"></i>
                             <span>FAQ</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_fim">
+                    <li class="header__nav-bar--mobile__fim">
                         <a href="contato.html">
                             <i class="fa-solid fa-phone"></i>
                             <span>Contato</span>
@@ -63,23 +63,24 @@
                     </li>
                 </ul>
             </nav>
-            <i class="fa-solid fa-magnifying-glass header-search" style="color: #ffffff;font-size: 20px;"></i>
+            <i class="fa-solid fa-magnifying-glass header__search" style="color: #ffffff;font-size: 20px;"></i>
         </header>
         <main class="main"> 
             <section class="separar-header"> </section>
-            <section class="historia_white">
-                <h2>QUEM SOMOS?</h2>
-                <p> O <span>Manoel MUN</span> é o modelo oficial de simulação da ONU do <span>Centro de Excelência Manoel Messias Feitosa.</span> Desde a sua criação, o projeto visa estimular o <span>debate diplomático</span>, a formação de lideranças, o <span>protagonismo juvenil</span> e diversas outras habilidades essenciais para o cidadão, por meio de um processo <span>didático</span> e <span>imersivo</span> de <span>debate</span> e <span>simulação</span> de delegações.</p>
+            <section class="historia historia--blue">
+                <h2 class="titulo">QUEM SOMOS?</h2>
+                <p class="historia__descricao"> O <span>Manoel MUN</span> é o modelo oficial de simulação da ONU do <span>Centro de Excelência Manoel Messias Feitosa.</span> Desde a sua criação, o projeto visa estimular o <span>debate diplomático</span>, a formação de lideranças, o <span>protagonismo juvenil</span> e diversas outras habilidades essenciais para o cidadão, por meio de um processo <span>didático</span> e <span>imersivo</span> de <span>debate</span> e <span>simulação</span> de delegações.</p>
             </section>
             <section class="missao">
-                <h2>MISSÃO</h2>
-                <ol>
-                    <li>Ampliar o conhecimento dos alunos</li>
-                    <li>lutae</li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ol>
+                <h2 class="titulo">MISSÃO</h2>
+                <ul class="lista">
+                    <li class="lista__item">Estimular o pensamento crítico</li>
+                    <li class="lista__item">Desenvolver a oratória</li>
+                    <li class="lista__item">Desenvolver o protagonismo</li>
+                    <li class="lista__item">Desenvolver as habilidades de negociação</li>
+                    <li class="lista__item">Ampliar o conhecimento dos alunos sobre o mundo que os cerca</li>
+                    <li class="lista__item">Praticar o trabalho em equipe e colaboração conjunta</li>
+                </ul>
             </section>
             <section class="galeria">
                 <h2>EDIÇÃO 2023</h2>
@@ -175,4 +176,4 @@
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
     </body>
-    </html>
+</html>
