Correção de lista

--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -6,6 +6,7 @@
         <link rel="icon" href="img/icon-logo.ico" type="image/png">
         <link rel="stylesheet" href="style.css">
         <title> Manoel MUN </title>
+        link
     </head>
     <body class="no-scroll">
         <header class="header">
