--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
                 <div class="header__nav-bar--mobile__fechar"><i class="fa-solid fa-bars header__menu--fechar" style="color:rgb(1, 82, 135);font-size: 20px;"></i></div>
                 <ul>
                     <li class="header__nav-bar--mobile__inicio">
-                        <a class="active" href="index.html">
+                        <a href="index.html">
                             <i class="fa-solid fa-house"></i>
                             <span>Início</span>
                         </a>
@@ -56,7 +56,7 @@
                         </a>
                     </li>
                     <li class="header__nav-bar--mobile__fim">
-                        <a href="contato.html">
+                        <a class="active" href="contato.html">
                             <i class="fa-solid fa-phone"></i>
                             <span>Contato</span>
                         </a>
@@ -67,7 +67,7 @@
         </header>
             <main class="main">
                 <section class="separar-header"> </section>
-                <h1>CONTATO</h1>
+                <h2 class="titulo">CONTATO</h2>
             </main>
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
