--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
                 </div>
             </section>
             <section class="video">
-                <h4>Assista nosso vídeo introdutório</h4>
-                <iframe class="video-video" width="80%" height="200px" src="https://www.youtube.com/embed/GVoHF7d5SIU" title="Boas vindas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen>></iframe>
+                <p class="video__title">Assista nosso vídeo introdutório </p>
+                <iframe class="video__video" width="80%" height="200px" src="https://www.youtube.com/embed/GVoHF7d5SIU" title="Boas vindas" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"allowfullscreen>></iframe>
             </section>
             <section class="historia historia--white">
                 <p class="historia__descricao">O <span>Manoel MUN</span> surgiu como uma iniciativa de alguns estudantes do <span>Centro de Excelência Manoel Messias Feitosa</span>. Voltado ao mundo diplomático, o primeiro modelo de simulação da onu no <span>sertão sergipano</span> se expandiu ao longo dos anos, englobando alunos de todo o <span>estado de Sergipe</span>. Atualmente estamos na nossa 3° edição, que iniciará no dia <span>21 de julho de 2025.</span></p>
             </section>
             <section class="figures">
-                <div class="figures-section">
+                <div class="figures__section">
                     <i class="fa-solid fa-building-columns" style="color:white; font-size:11em;"></i>
-                    <p>Aprenda geopolítica enquanto debate</p>
+                    <p class="figures__subtitle">Aprenda geopolítica enquanto debate</p>
                 </div>
-                <div class="figures-section">
+                <div class="figures__section">
                     <i class="fa-solid fa-comments" style="color: #fafafa; font-size: 11em;"></i>
-                    <p>Negocie com outras delegações</p>
+                    <p class="figures__subtitle">Negocie com outras delegações</p>
                 </div>
-                <div class="figures-section">
+                <div class="figures__section">
                     <i class="fa-solid fa-handshake" style="color: #ffffff;font-size: 11em;line-height: 0.8;"></i>
-                    <p>Elabore tratados em equipe</p>
+                    <p class="figures__subtitle">Elabore tratados em equipe</p>
                 </div>
             </section>
             <section class="maps">
-                <p>Nossa Localização:</p>
+                <p class="maps__title">Nossa Localização:</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3364.2110472283243!2d-37.41622799018311!3d-10.21171288986268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x70f78ed949e3943%3A0x2e39fb4f8cc70543!2sCentro%20de%20Excel%C3%AAncia%20Manoel%20Messias%20Feitosa!5e1!3m2!1spt-BR!2sbr!4v1748781769412!5m2!1spt-BR!2sbr" width="80%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
             <footer class="footer">
