--- a/materiais.html
+++ b/materiais.html
@@ -20,7 +20,7 @@
                 <div class="header__nav-bar--mobile__fechar"><i class="fa-solid fa-bars header__menu--fechar" style="color:rgb(1, 82, 135);font-size: 20px;"></i></div>
                 <ul>
                     <li class="header__nav-bar--mobile__inicio">
-                        <a class="active" href="index.html">
+                        <a href="index.html">
                             <i class="fa-solid fa-house"></i>
                             <span>Início</span>
                         </a>
@@ -44,7 +44,7 @@
                         </a>
                     </li>
                     <li class="header__nav-bar--mobile__meio">
-                        <a href="materiais.html">
+                        <a class="active" href="materiais.html">
                             <i class="fa-solid fa-book"></i>
                             <span>Materiais de apoio</span>
                         </a>
@@ -67,7 +67,7 @@
         </header>
             <main class="main">
                 <section class="separar-header"> </section>
-                <h1>MATERIAIS</h1>
+                <h2 class="titulo">MATERIAIS</h2>
             </main>
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
