--- a/podio.html
+++ b/podio.html
@@ -20,7 +20,7 @@
                 <div class="header__nav-bar--mobile__fechar"><i class="fa-solid fa-bars header__menu--fechar" style="color:rgb(1, 82, 135);font-size: 20px;"></i></div>
                 <ul>
                     <li class="header__nav-bar--mobile__inicio">
-                        <a class="active" href="index.html">
+                        <a href="index.html">
                             <i class="fa-solid fa-house"></i>
                             <span>Início</span>
                         </a>
@@ -32,7 +32,7 @@
                         </a>
                     </li>
                     <li class="header__nav-bar--mobile__meio">
-                        <a href="podio.html">
+                        <a class="active" href="podio.html">
                             <i class="fa-solid fa-ranking-star"></i>
                             <span>Pódio Best Delegate</span>
                         </a>
@@ -68,7 +68,7 @@
             <main class="main">
                 <section class="separar-header"> </section>
                 <section class="historia historia--blue">
-                    <h1 class="titulo">PÓDIO</h1>
+                    <h2 class="titulo">PÓDIO</h2>
                     <p class="historia__descricao">Reconhecemos aqui os <span>delegados</span> que mais se <span>destacaram</span> nas edições do <span>Manoel MUN</span>, demonstrando <span>liderança</span>, <span>protagonismo</span> e <span>diplomacia</span>.</p>
                     <p class="historia__descricao">A premiação de <span>Best Delegate</span> é voltada ao <span>delegado</span> ou <span>dupla de delegados</span> que mais se <span>destacaram</span> em seu respectivo <span>comitê</span>, sendo referência em <span>construção argumentativa, oratória, habilidades de negociação</span>, entre outras.</p>
                 </section>
