--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -20,13 +20,13 @@
                 <div class="header__nav-bar--mobile__fechar"><i class="fa-solid fa-bars header__menu--fechar" style="color:rgb(1, 82, 135);font-size: 20px;"></i></div>
                 <ul>
                     <li class="header__nav-bar--mobile__inicio">
-                        <a class="active" href="index.html">
+                        <a href="index.html">
                             <i class="fa-solid fa-house"></i>
                             <span>Início</span>
                         </a>
                     </li>
                     <li class="header__nav-bar--mobile__meio">
-                        <a href="sobre-nos.html">
+                        <a class="active" href="sobre-nos.html">
                             <i class="fa-solid fa-pen-fancy"></i>
                             <span>Nossa História</span>
                         </a>
@@ -77,96 +77,89 @@
                     <li class="lista__item">Estimular o pensamento crítico</li>
                     <li class="lista__item">Desenvolver a oratória</li>
                     <li class="lista__item">Desenvolver o protagonismo</li>
-                    <li class="lista__item">Desenvolver as habilidades de negociação</li>
-                    <li class="lista__item">Ampliar o conhecimento dos alunos sobre o mundo que os cerca</li>
-                    <li class="lista__item">Praticar o trabalho em equipe e colaboração conjunta</li>
+                    <li class="lista__item">Desenvolver a negociação</li>
+                    <li class="lista__item">Praticar o trabalho em equipe   </li>
                 </ul>
             </section>
             <section class="galeria">
-                <h2>EDIÇÃO 2023</h2>
-                <div class="galeria-card">
-                    <img src="img/img1.jpg">
-                    <div class="galeria-text">
+                <h2 class="titulo">EDIÇÃO 2023</h2>
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img1.jpg">
+                    <div class="galeria__text">
                         <h3> Junho de 2023 </h3>
                         <p> Primeiras Reuniões </p>
                     </div>
                 </div>
-                <div class="galeria-card">
-                    <img src="img/img2.jpg">
-                    <div class="galeria-text">
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img2.jpg">
+                    <div class="galeria__text">
                         <h3> Novembro de 2023 </h3>
                         <p> Apresentação do projeto </p>
                     </div>
-                </div class="galeria-text">
-                <div class="galeria-card">
-                    <img src="img/img3.jpg">
-                    <div class="galeria-text">
+                </div>
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img3.jpg">
+                    <div class="galeria__text">
                         <h3> Novembro de 2023 </h3>
                         <p> Cerimônia de Abertura </p>
                     </div>
                 </div>
-                <div class="galeria-card">
-                    <img src="img/img4.jpg">
-                    <div class="galeria-text">
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img4.jpg">
+                    <div class="galeria__text">
                         <h3> Novembro de 2023 </h3>
                         <p> Início dos Comitês </p>
                     </div>
                 </div>
-                <div class="galeria-card">
-                    <img src="img/img5.jpg">
-                    <div class="galeria-text">
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img5.jpg">
+                    <div class="galeria__text">
                         <h3> Novembro de 2023 </h3>
                         <p> Fim dos comitês </p>
                     </div>
                 </div>
-                <div class="galeria-card">
-                    <img src="img/img6.jpg">
-                    <div class="galeria-text">
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img6.jpg">
+                    <div class="galeria__text">
                         <h3> Novembro de 2023 </h3>
                         <p> Cerimônia de Encerramento </p>
                     </div>
                 </div>
             </section>
+
             <section class="galeria">
-                <h2>EDIÇÃO 2024</h2>
-                <div class="galeria-card">
-                    <img src="img/img1.jpg">
-                    <div class="galeria-text">
+                <h2 class="titulo">EDIÇÃO 2024</h2>
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img1.jpg">
+                    <div class="galeria__text">
                         <h3> Junho de 2023 </h3>
                         <p> Primeiras Reuniões </p>
                     </div>
                 </div>
-                <div class="galeria-card">
-                    <img src="img/img2.jpg">
-                    <div class="galeria-text">
-                        <h3> Novembro de 2023 </h3>
-                        <p> Apresentação do projeto </p>
-                    </div>
-                </div class="galeria-text">
-                <div class="galeria-card">
-                    <img src="img/img3.jpg">
-                    <div class="galeria-text">
-                        <h3> Novembro de 2023 </h3>
-                        <p> Cerimônia de Abertura </p>
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img8.jpeg">
+                    <div class="galeria__text">
+                        <h3> Agosto de 2024 </h3>
+                        <p> Abertura da 2°Edição </p>
                     </div>
                 </div>
-                <div class="galeria-card">
-                    <img src="img/img4.jpg">
-                    <div class="galeria-text">
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img8.2.jpeg">
+                    <div class="galeria__text">
+                        <h3> Agosto de 2024 </h3>
+                        <p> Mais de 80 participantes </p>
+                    </div>
+                </div>
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img9.jpeg">
+                    <div class="galeria__text">
                         <h3> Novembro de 2023 </h3>
                         <p> Início dos Comitês </p>
                     </div>
                 </div>
-                <div class="galeria-card">
-                    <img src="img/img5.jpg">
-                    <div class="galeria-text">
-                        <h3> Novembro de 2023 </h3>
-                        <p> Fim dos comitês </p>
-                    </div>
-                </div>
-                <div class="galeria-card">
-                    <img src="img/img6.jpg">
-                    <div class="galeria-text">
+                <div class="galeria__card">
+                    <img class="galeria__img" src="img/img10.jpeg">
+                    <div class="galeria__text">
                         <h3> Novembro de 2023 </h3>
                         <p> Cerimônia de Encerramento </p>
                     </div>
