Adicionando a primeira versão do footer

--- a/materiais.html
+++ b/materiais.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <title>Materiais de Apoio</title>
     </head>
-    <body class="no-scroll">
+    <body class="no-scroll body">
         <header class="header">
             <i class="fa-solid fa-bars header__menu" style="color: #ffffff;font-size: 20px;"></i>
             <img class="header__logo" src="img/logo.png">
@@ -69,6 +69,10 @@
                 <section class="separar-header"> </section>
                 <h2 class="titulo">MATERIAIS</h2>
             </main>
+            <section class="separar-footer"></section>
+            <footer class="footer footer--blue">
+                <p class="footer__text"> &copy 2025 Manoel MUN! ALL RIGHT RESERVED </p>
+            </footer>
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
     </body>
