--- a/podio.html
+++ b/podio.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <title>Best-delegate</title>
     </head>
-    <body class="no-scroll">
+    <body class="no-scroll body">
         <header class="header">
             <i class="fa-solid fa-bars header__menu" style="color: #ffffff;font-size: 20px;"></i>
             <img class="header__logo" src="img/logo.png">
@@ -73,6 +73,10 @@
                     <p class="historia__descricao">A premiação de <span>Best Delegate</span> é voltada ao <span>delegado</span> ou <span>dupla de delegados</span> que mais se <span>destacaram</span> em seu respectivo <span>comitê</span>, sendo referência em <span>construção argumentativa, oratória, habilidades de negociação</span>, entre outras.</p>
                 </section>
             </main>
+            <section class="separar-footer"></section>
+            <footer class="footer footer--blue">
+                <p class="footer__text"> &copy 2025 Manoel MUN! ALL RIGHT RESERVED </p>
+            </footer>
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
     </body>
