--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <title> Manoel MUN </title>
     </head>
-    <body class="no-scroll body--blue">
+    <body class="no-scroll body--blue body">
         <header class="header">
             <i class="fa-solid fa-bars header__menu" style="color: #ffffff;font-size: 20px;"></i>
             <img class="header__logo" src="img/logo.png">
@@ -100,10 +100,11 @@
                 <p class="maps__title">Nossa Localização:</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3364.2110472283243!2d-37.41622799018311!3d-10.21171288986268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x70f78ed949e3943%3A0x2e39fb4f8cc70543!2sCentro%20de%20Excel%C3%AAncia%20Manoel%20Messias%20Feitosa!5e1!3m2!1spt-BR!2sbr!4v1748781769412!5m2!1spt-BR!2sbr" width="80%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
-            <footer class="footer">
-                <p>&copy</p>
-            </footer>
         </main>
+        <section class="separar-footer"></section>
+        <footer class="footer">
+            <p class="footer__text"> &copy 2025 Manoel MUN! ALL RIGHT RESERVED </p>
+        </footer>
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
     </body>
