Alteração da semântica do footer, adição de descrição das seções do index, criação de media-query e criação de uma pasta para os estilos

--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="img/icon-logo.ico" type="image/png">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="estilo/style.css">
+        <link rel="stylesheet" href="estilo/media-query.css">
         <title>FAQ</title>
     </head>
     <body class="no-scroll body">
@@ -69,10 +70,12 @@
                 <section class="separar-header"> </section>
                 <h2 class="titulo">FAQ</h2>
             </main>
-            <section class="separar-footer"></section>
-            <footer class="footer footer--blue">
-                <p class="footer__text"> &copy 2025 Manoel MUN! ALL RIGHT RESERVED </p>
-            </footer>
+
+            <!-- RODAPÉ -->
+        
+        <footer class="footer-all-white">
+            <p> &copy 2025 Manoel MUN! ALL RIGHT RESERVED </p>
+        </footer>
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
     </body>
