--- a/podio.html
+++ b/podio.html
@@ -4,7 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" href="img/icon-logo.ico" type="image/png">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="estilo/style.css">
+        <link rel="stylesheet" href="estilo/media-query.css">
         <title>Best-delegate</title>
     </head>
     <body class="no-scroll body">
@@ -73,10 +74,12 @@
                     <p class="historia__descricao">A premiação de <span>Best Delegate</span> é voltada ao <span>delegado</span> ou <span>dupla de delegados</span> que mais se <span>destacaram</span> em seu respectivo <span>comitê</span>, sendo referência em <span>construção argumentativa, oratória, habilidades de negociação</span>, entre outras.</p>
                 </section>
             </main>
-            <section class="separar-footer"></section>
-            <footer class="footer footer--blue">
-                <p class="footer__text"> &copy 2025 Manoel MUN! ALL RIGHT RESERVED </p>
-            </footer>
+
+            <!-- RODAPÉ -->
+        
+        <footer class="footer-all-white">
+            <p> &copy 2025 Manoel MUN! ALL RIGHT RESERVED </p>
+        </footer>
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/e354a8dc68.js" crossorigin="anonymous"></script>
     </body>
