Adicionando configurações de responsividade

--- a/index.html
+++ b/index.html
@@ -24,46 +24,46 @@
                 <li><a href="sobre-nos.html">Sobre Nós</a></li>
                 <li><a href="#">Contato</a></li>
             </nav>
-            <nav class="nav-bar_mobile">
-                <div class="nav-bar_mobile-fechar"><i class="fa-solid fa-bars header-menu-fechar" style="color:rgb(1, 82, 135);font-size: 20px;"></i></div>
+            <nav class="header__nav-bar--mobile">
+                <div class="header__nav-bar--mobile__fechar"><i class="fa-solid fa-bars header__menu--fechar" style="color:rgb(1, 82, 135);font-size: 20px;"></i></div>
                 <ul>
-                    <li class="nav-bar_mobile_inicio">
+                    <li class="header__nav-bar--mobile__inicio">
                         <a class="active" href="index.html">
                             <i class="fa-solid fa-house"></i>
                             <span>Início</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="sobre-nos.html">
                             <i class="fa-solid fa-pen-fancy"></i>
                             <span>Nossa História</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="podio.html">
                             <i class="fa-solid fa-ranking-star"></i>
                             <span>Pódio Best Delegate</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="comites.html">
                             <i class="fa-solid fa-people-group"></i>
                             <span>Comitês</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="materiais.html">
                             <i class="fa-solid fa-book"></i>
                             <span>Materiais de apoio</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_meio">
+                    <li class="header__nav-bar--mobile__meio">
                         <a href="faq.html">
                             <i class="fa-solid fa-question"></i>
                             <span>FAQ</span>
                         </a>
                     </li>
-                    <li class="nav-bar_mobile_fim">
+                    <li class="header__nav-bar--mobile__fim">
                         <a href="contato.html">
                             <i class="fa-solid fa-phone"></i>
                             <span>Contato</span>
@@ -71,18 +71,18 @@
                     </li>
                 </ul>
             </nav>
-            <i class="fa-solid fa-magnifying-glass header-search" style="color: #ffffff;font-size: 20px;"></i>
+            <i class="fa-solid fa-magnifying-glass header__search" style="color: #ffffff;font-size: 20px;"></i>
         </header>
 
         <!-- CONTEÚDO PRINCIPAL -->
         <main class="main"> 
             <section class="boas-vindas">
-                <img class="boas-vindas-img" src="img/img-principal.jpg">
-                <div class="boas-vindas-shadow"></div>
-                <div class="boas-vindas-container">
-                    <h1 class="boas-vindas-titulo h1_white">MANOEL MUN</h1>
-                    <p class="boas-vindas-p">A maior simulação do alto sertão sergipano</p>
-                    <button class="button-principal button_disabled">INSCREVA-SE <br> --em breve--</button>
+                <img class="boas-vindas__img" src="img/img-principal.jpg">
+                <div class="boas-vindas__shadow"></div>
+                <div class="boas-vindas__container">
+                    <h1 class="boas-vindas__title">MANOEL MUN</h1>
+                    <p class="boas-vindas__subtitle">A maior simulação do alto sertão sergipano</p>
+                    <button class="button button--disabled">INSCREVA-SE <br> --em breve--</button>
                 </div>
             </section>
 
@@ -113,6 +113,7 @@
 
             <!-- LOCALIZAÇÃO DO CEMMF-->
             <section class="maps">
+                <p class="maps__title">Nossa Localização:</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3364.2110472283243!2d-37.41622799018311!3d-10.21171288986268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x70f78ed949e3943%3A0x2e39fb4f8cc70543!2sCentro%20de%20Excel%C3%AAncia%20Manoel%20Messias%20Feitosa!5e1!3m2!1spt-BR!2sbr!4v1748781769412!5m2!1spt-BR!2sbr" width="80%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </section>
         </main>
