--- a/materiais.html
+++ b/materiais.html
@@ -68,7 +68,10 @@
         </header>
             <main class="main">
                 <section class="separar-header"> </section>
-                <section class="historia historia--blue">
+                <h2 class="titulo">MATERIAIS</h2>
+            </main>
+
+            <section class="historia historia--blue">
                     <h2 class="titulo">MATERIAIS</h2>
                     <p class="historia__descricao">Todos os <span>documentos</span> dessa página foram <span>criados</span> na nossa <span>3°Edição</span>. Sinta-se livre para <span>estudar</span> e se <span>preparar</span> por meio desses arquivos.</p>
                 </section>
@@ -85,8 +88,7 @@
                         <h2 class="document__title">GUIA - AGNU</h2>
                         <p class="document__subtitle"><a class="document__download" download href="documentos/agnu-guia-de-estudos.pdf">CLIQUE AQUI</a></p>
                     </section>
-                </section>
-            </main>
+                </section> 
 
             <!-- RODAPÉ -->
         
