Adicionando o link para a logo do header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- CABEÇALHO -->
         <header class="header">
             <i class="fa-solid fa-bars header__menu" style="color: #ffffff;font-size: 20px;"></i>
-            <img class="header__logo" src="img/logo.png">
+            <a href="index.html"><img class="header__logo" src="img/logo.png"></a>
             
             <!--MENU DE NAVEGAÇÃO-->
             <nav class="header__nav-bar">
