--- a/comites.html
+++ b/comites.html
@@ -11,7 +11,7 @@
     <body class="no-scroll body">
         <header class="header">
             <i class="fa-solid fa-bars header__menu" style="color: #ffffff;font-size: 20px;"></i>
-            <img class="header__logo" src="img/logo.png">
+            <a href="index.html"><img class="header__logo" src="img/logo.png"></a>
             <nav class="header__nav-bar">
                 <li><a class="active" href="index.html">Início</a></li>
                 <li><a href="sobre-nos.html">Sobre Nós</a></li>
